添加akAuth walle/multiReload 自动路由
